--- a/css/style.css
+++ b/css/style.css
@@ -355,7 +355,9 @@ float: left;
 	float: left;
 	margin: 0px;
 	padding: 0px;
-	background-image: url("/images/banner2.jpg");
+	background-image: url(
+        "demo/images/banner2.jpg"
+      );
  	
 }
 
@@ -434,7 +436,7 @@ text-transform:lowercase;
 	float: left;
 	margin: 0px;
 	padding: 0px;
-	background-image: url("images/banner3.jpg");
+	background-image: url("demo/images/banner3.jpg");
 	background-size:580px 236px;
 	background-repeat: no-repeat;
 	
@@ -458,7 +460,7 @@ color:pink;
 	width:100%;
 	margin: 0px;
 	padding:0px;
-	background-image: url("images/banner3.jpg");
+	background-image: url("demo/images/banner3.jpg");
 	background-size:280px 236px;
 	background-repeat: no-repeat;
 	height:100%;
