--- a/css/style.css
+++ b/css/style.css
@@ -355,7 +355,7 @@ float: left;
 	float: left;
 	margin: 0px;
 	padding: 0px;
-	background-image: url("demo/images/banner2.jpg");
+	background-image: url("https://github.com/dilipteegala/demo/blob/master/images/banner2.jpg");
  	
 }
 
