--- a/css/style.css
+++ b/css/style.css
@@ -434,7 +434,7 @@ text-transform:lowercase;
 	float: left;
 	margin: 0px;
 	padding: 0px;
-	background-image: url("demo/images/banner3.jpg");
+	background-image: url("https://github.com/dilipteegala/demo/blob/master/images/banner3.jpg");
 	background-size:580px 236px;
 	background-repeat: no-repeat;
 	
@@ -458,7 +458,7 @@ color:pink;
 	width:100%;
 	margin: 0px;
 	padding:0px;
-	background-image: url("demo/images/banner3.jpg");
+	background-image: url("https://github.com/dilipteegala/demo/blob/master/images/banner3.jpg");
 	background-size:280px 236px;
 	background-repeat: no-repeat;
 	height:100%;
