--- a/css/style.css
+++ b/css/style.css
@@ -355,7 +355,7 @@ float: left;
 	float: left;
 	margin: 0px;
 	padding: 0px;
-	background-image: url("images/banner2.jpg");
+	background-image: url("images\banner2.jpg");
  	
 }
 
